--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,27 @@ button:focus-visible {
   }
 } */
 @import "tailwindcss";
+
+.rotate-card {
+  animation: rotateY360 0.6s ease-in-out;
+}
+
+@keyframes rotateY360 {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(360deg);
+  }
+}
+
+button:hover {
+  box-shadow: 2.3px 3px 0.2px 1px whitesmoke;
+}
+
+button:active {
+  /* box-shadow: inset .2px 1px 7px 1px darkslategray ; */
+  box-shadow: none;
+  transform: scale(0.98);
+}
+
